--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "@types/node": "^14.14.12",
     "@types/react": "^17.0.0",
     "firebase": "^8.2.1",
